--- a/src/output.css
+++ b/src/output.css
@@ -586,6 +586,10 @@ video {
   align-items: center;
 }
 
+.gap-12 {
+  gap: 3rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -594,12 +598,8 @@ video {
   gap: 1.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-12 {
-  gap: 3rem;
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .bg-primary {
@@ -717,9 +717,13 @@ video {
   font-style: normal;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 #root {
